--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -1546,6 +1546,8 @@ uk:
       tel_to_us: Телефонуйте
       mail_us: Електронна адреса
     homepage:
+      about_us: Про нас
+      technical_support: Техпідтримка
       account: Особистий кабінет
       news: Новини
       znak: Знак якості
